drone_ros/drone_ros/log/build_2024-04-28_20-33-30/dronecomm/stderr.log
  File "/home/drone/Desktop/drone_ros/install/dronecomm/lib/python3.10/site-packages/dronecomm/publisher.py", line 12
    	bool status = True
    	     ^^^^^^
SyntaxError: invalid syntax

